fixing client name

--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -9,7 +9,7 @@
     "
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Clean2.WebUI</a>
+      <a class="navbar-brand" [routerLink]="['/']">CleanArchitecture.WebUI</a>
       <button
         class="navbar-toggler"
         type="button"
